--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,3 +4,31 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+#web-app{
+    width: 100vw;
+    height: 100vh;
+    padding-top: 50px;
+    background: rgb(0,168,132);
+    background: linear-gradient(0deg,  rgb(236, 229, 221)85% ,  rgb(	18, 140, 126)10%)
+}
+#container{
+    width: 90%;
+    margin: 0 auto;
+    height: 90vh;
+    background-image: url(../img/mine.jpg);
+    
+}
+#header-left{
+    background-color: white;
+    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+#container-left{
+    
+    background-color: yellow;
+    height: 90vh;
+    overflow-y: visible;
+}
